--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,25 @@
     "name": "Cámara PWA",
     "short_name": "CamaraPWA",
     "description": "Aplicación web progresiva para tomar fotos con la cámara",
-    "start_url": "/",
+    "start_url": "/PWA-Camara/",
+    "scope": "/PWA-Camara/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "orientation": "portrait",
     "icons": [
         {
-            "src": "images/icons/icon-192.png",
+            "src": "images/icons/192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "images/icons/icon-180.png",
+            "src": "images/icons/180.png",
             "sizes": "180x180",
             "type": "image/png"
         },
         {
-            "src": "images/icons/icon-512.png",
+            "src": "images/icons/512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
